--- a/directbak.yaml
+++ b/directbak.yaml
@@ -812,7 +812,6 @@ payload:
   - '+.108101.xyz'
   - '+.108105.xyz'
   - '+.108198.com'
-  - '+.10852.com'
   - '+.10865.com'
   - '+.108cun.com'
   - '+.108pk.com'
@@ -847,6 +846,7 @@ payload:
   - '+.11000.vip'
   - '+.11000011.com'
   - '+.1109.com'
+  - '+.110ask.com'
   - '+.110hack.com'
   - '+.110tm.com'
   - '+.110zhibo.com'
@@ -2331,6 +2331,7 @@ payload:
   - '+.293.net'
   - '+.2952.cc'
   - '+.29592.net'
+  - '+.2961h.com'
   - '+.29663.com'
   - '+.296u.com'
   - '+.29797.com'
@@ -2409,7 +2410,6 @@ payload:
   - '+.2shihui.net'
   - '+.2shu8.cc'
   - '+.2sitebbs.com'
-  - '+.2smtc.com'
   - '+.2sx.net'
   - '+.2tianxin.com'
   - '+.2tx.com'
@@ -3344,6 +3344,7 @@ payload:
   - '+.425yx.com'
   - '+.42651.com'
   - '+.426g.com'
+  - '+.42824.com'
   - '+.429006.com'
   - '+.42927bj.com'
   - '+.42927gz.com'
@@ -3408,6 +3409,7 @@ payload:
   - '+.4567w.com'
   - '+.456ss.com'
   - '+.457.com'
+  - '+.45758924.vip'
   - '+.458kq.com'
   - '+.459.org'
   - '+.45app.com'
@@ -4481,6 +4483,7 @@ payload:
   - '+.5433.com'
   - '+.545c.com'
   - '+.5460.net'
+  - '+.5490146.cc'
   - '+.5499.com'
   - '+.54benniao.com'
   - '+.54bt.com'
@@ -4532,6 +4535,7 @@ payload:
   - '+.557.net'
   - '+.5577.com'
   - '+.5580866.cc'
+  - '+.5580981.cc'
   - '+.5588.tv'
   - '+.5599.com'
   - '+.55dai.com'
@@ -4759,6 +4763,7 @@ payload:
   - '+.59490.com'
   - '+.595818.com'
   - '+.595led.com'
+  - '+.595tuchuang.com'
   - '+.595tz286.cc'
   - '+.596fc.com'
   - '+.597.com'
@@ -5072,6 +5077,7 @@ payload:
   - '+.632news.com'
   - '+.636935.com'
   - '+.6383.com'
+  - '+.639255.cc'
   - '+.639311.com'
   - '+.6399868.com'
   - '+.63diy.com'
@@ -5941,7 +5947,11 @@ payload:
   - '+.8477.com'
   - '+.848.com'
   - '+.8487x.com'
+  - '+.8499136.com'
+  - '+.8499159.com'
+  - '+.84992446.xyz'
   - '+.849959.com'
+  - '+.8499683.com'
   - '+.84dwc.com'
   - '+.84fk.com'
   - '+.84ju.com'
@@ -5972,6 +5982,7 @@ payload:
   - '+.86175.com'
   - '+.861817.com'
   - '+.86215.com'
+  - '+.8624x.com'
   - '+.86262.com'
   - '+.8633.com'
   - '+.863347.com'
@@ -6215,7 +6226,6 @@ payload:
   - '+.8pingce.com'
   - '+.8pu.com'
   - '+.8qwe5.com'
-  - '+.8qwx.com'
   - '+.8s123.com'
   - '+.8she.com'
   - '+.8tgh.com'
@@ -7090,7 +7100,6 @@ payload:
   - '+.aa7.org'
   - '+.aa8828.com'
   - '+.aaahsxb.com'
-  - '+.aaapeixun.com'
   - '+.aaayun.com'
   - '+.aadongman.com'
   - '+.aads-cng.net'
@@ -7320,7 +7329,6 @@ payload:
   - '+.adebibi.com'
   - '+.adesk.com'
   - '+.adexplain.com'
-  - '+.adfeiwo.com'
   - '+.adflying.com'
   - '+.adfortest.com'
   - '+.adfuns.com'
@@ -7377,6 +7385,7 @@ payload:
   - '+.adpolestar.net'
   - '+.adportion.com'
   - '+.adquan.com'
+  - '+.ads4f6gf46.com'
   - '+.ads8.com'
   - '+.adsage.com'
   - '+.adsame.com'
@@ -7580,6 +7589,7 @@ payload:
   - '+.ahqnrc.com'
   - '+.ahrefa.com'
   - '+.ahrunzi.com'
+  - '+.ahs.pub'
   - '+.ahscl.com'
   - '+.ahshuhua.net'
   - '+.ahsjxjy.com'
@@ -7633,6 +7643,7 @@ payload:
   - '+.aicai.com'
   - '+.aicaicdn.com'
   - '+.aicdn.com'
+  - '+.aicdn2.com'
   - '+.aicdn4.com'
   - '+.aicdn5.com'
   - '+.aicesu.com'
@@ -8658,6 +8669,8 @@ payload:
   - '+.aoshitang.com'
   - '+.aoshowsh.com'
   - '+.aoshu.com'
+  - '+.aosikaimge.com'
+  - '+.aosikazyimage.com'
   - '+.aosong.com'
   - '+.aosoo.com'
   - '+.aoswtc.com'
@@ -9042,6 +9055,7 @@ payload:
   - '+.askququ.com'
   - '+.asktao.com'
   - '+.askxt.org'
+  - '+.askzybf.com'
   - '+.aslzw.com'
   - '+.asm64.com'
   - '+.asnlab.com'
@@ -12645,6 +12659,7 @@ payload:
   - '+.ccqyj.com'
   - '+.ccrgt.com'
   - '+.ccrjw.com'
+  - '+.ccschy.com'
   - '+.ccshao.com'
   - '+.ccsph.com'
   - '+.ccssmm.com'
@@ -14492,6 +14507,7 @@ payload:
   - '+.chuanboyi.com'
   - '+.chuandaizc.com'
   - '+.chuandong.com'
+  - '+.chuang-fan.com'
   - '+.chuang.pro'
   - '+.chuangbie.com'
   - '+.chuangcache.com'
@@ -14786,7 +14802,6 @@ payload:
   - '+.cityup.org'
   - '+.citywo.com'
   - '+.cityy.com'
-  - '+.civilcn.com'
   - '+.civilness.com'
   - '+.civiw.com'
   - '+.ciweek.com'
@@ -15632,7 +15647,6 @@ payload:
   - '+.cntuw.com'
   - '+.cntv.com'
   - '+.cntwg.com'
-  - '+.cntxw.com'
   - '+.cnuninet.net'
   - '+.cnutcon.com'
   - '+.cnuuu.com'
@@ -17610,6 +17624,7 @@ payload:
   - '+.ddtugame.com'
   - '+.ddtv135.com'
   - '+.ddtv137.com'
+  - '+.ddtv141.com'
   - '+.ddtxgame.com'
   - '+.ddtz5.com'
   - '+.ddun.com'
@@ -18069,6 +18084,7 @@ payload:
   - '+.diantui.net'
   - '+.dianwanhezi.com'
   - '+.dianwannan.com'
+  - '+.dianwantu.com'
   - '+.dianwoba.com'
   - '+.dianwoda.com'
   - '+.dianwoyou.com'
@@ -18955,7 +18971,6 @@ payload:
   - '+.dplord.com'
   - '+.dplslab.com'
   - '+.dpqct.com'
-  - '+.dprktimes.com'
   - '+.dptech.com'
   - '+.dptechnology.net'
   - '+.dpwl.net'
@@ -20519,6 +20534,7 @@ payload:
   - '+.ergengtv.com'
   - '+.ergouzi.fun'
   - '+.erhaojie.com'
+  - '+.erhkpo.com'
   - '+.ericfu.me'
   - '+.erichfund.com'
   - '+.erji.com'
@@ -21516,6 +21532,7 @@ payload:
   - '+.fengchizixun.com'
   - '+.fengchj.com'
   - '+.fengchuanba.com'
+  - '+.fengchui.cc'
   - '+.fengchusheng.com'
   - '+.fengcms.com'
   - '+.fengcx.com'
@@ -21721,7 +21738,6 @@ payload:
   - '+.finaltheory.me'
   - '+.financeun.com'
   - '+.financialstreetforum.com'
-  - '+.finansbankservices.net'
   - '+.finchain.info'
   - '+.finchina.com'
   - '+.finclip.com'
@@ -22218,7 +22234,6 @@ payload:
   - '+.freericheyes.com'
   - '+.freeshoppingchina.com'
   - '+.freessl.org'
-  - '+.freetvro.com'
   - '+.freeuid.com'
   - '+.freewhale.net'
   - '+.freeydch.com'
@@ -23134,6 +23149,7 @@ payload:
   - '+.geekbang.org'
   - '+.geekbangtech.com'
   - '+.geekcar.com'
+  - '+.geekdata.com'
   - '+.geekdive.com'
   - '+.geekercloud.com'
   - '+.geekerconsulting.com'
@@ -23405,6 +23421,7 @@ payload:
   - '+.gimmgimm.com'
   - '+.gimoo.net'
   - '+.ginshio.org'
+  - '+.gio.ren'
   - '+.giocdn.com'
   - '+.gionee.com'
   - '+.gionee.net'
@@ -23413,7 +23430,6 @@ payload:
   - '+.girls-frontline.com'
   - '+.girlsfighters.com'
   - '+.girlw.net'
-  - '+.girtmob.com'
   - '+.giscafer.com'
   - '+.giser.net'
   - '+.giserdqy.com'
@@ -23992,6 +24008,7 @@ payload:
   - '+.gray-ice.com'
   - '+.grcbank.com'
   - '+.grchina.com'
+  - '+.grdsv.com'
   - '+.greatbit.com'
   - '+.greatld.com'
   - '+.greatopensource.com'
@@ -24168,7 +24185,6 @@ payload:
   - '+.guaikemov.com'
   - '+.guailuo.com'
   - '+.guailuzi.com'
-  - '+.guaiwola.com'
   - '+.guaixun.com'
   - '+.guajibao.club'
   - '+.guajibao.me'
@@ -24539,7 +24555,6 @@ payload:
   - '+.gxkjec.com'
   - '+.gxkjjt.com'
   - '+.gxlcms.com'
-  - '+.gxlsjt.com'
   - '+.gxlxs2008.net'
   - '+.gxmlyjy.com'
   - '+.gxmmkt.com'
@@ -27109,6 +27124,7 @@ payload:
   - '+.hqbd.com'
   - '+.hqbnb.com'
   - '+.hqbsh.com'
+  - '+.hqbuoh.com'
   - '+.hqbuy.com'
   - '+.hqbuycdn.com'
   - '+.hqc-china.com'
@@ -27740,7 +27756,6 @@ payload:
   - '+.huihua365.com'
   - '+.huihuaren.com'
   - '+.huihuarensheng.com'
-  - '+.huihuitech.net'
   - '+.huiian.com'
   - '+.huiji.wiki'
   - '+.huijiame.com'
@@ -27761,6 +27776,7 @@ payload:
   - '+.huilm.com'
   - '+.huilog.com'
   - '+.huilongsen.com'
+  - '+.huiluopang.com'
   - '+.huilvwang.com'
   - '+.huim.com'
   - '+.huimaiche.com'
@@ -27778,6 +27794,7 @@ payload:
   - '+.huiqudsp.com'
   - '+.huiris.com'
   - '+.huirixiao.com'
+  - '+.huiruwei.com'
   - '+.huishangbao.com'
   - '+.huishangol.com'
   - '+.huishanjianchayuan.com'
@@ -28095,7 +28112,6 @@ payload:
   - '+.hwehs.com'
   - '+.hweimall.com'
   - '+.hwfcw.com'
-  - '+.hwgmthree.com'
   - '+.hwht.com'
   - '+.hwjyw.com'
   - '+.hwlantian.com'
@@ -29156,6 +29172,7 @@ payload:
   - '+.ii77.com'
   - '+.iiad.com'
   - '+.iianews.com'
+  - '+.iiapple.com'
   - '+.iiaq.net'
   - '+.iibechina.com'
   - '+.iibq.com'
@@ -29218,6 +29235,7 @@ payload:
   - '+.ijq.tv'
   - '+.ijshs.com'
   - '+.ijsp.net'
+  - '+.ijtomh.com'
   - '+.ijuanshi.com'
   - '+.ijuer.com'
   - '+.ijuhepay.com'
@@ -29340,6 +29358,7 @@ payload:
   - '+.imageaccelerate.com'
   - '+.imageedu.com'
   - '+.imagefz.com'
+  - '+.imagehub.cc'
   - '+.imagelol.com'
   - '+.imagepy.org'
   - '+.images-cache.com'
@@ -30456,7 +30475,6 @@ payload:
   - '+.iyunbiao.com'
   - '+.iyunmai.com'
   - '+.iyunshu.com'
-  - '+.iyuntian.com'
   - '+.iyunv.com'
   - '+.iyunyue.com'
   - '+.iyunzk.com'
@@ -30592,7 +30610,6 @@ payload:
   - '+.jbdown.com'
   - '+.jbedu.org'
   - '+.jbelf.com'
-  - '+.jbfoundry.com'
   - '+.jbqipa.com'
   - '+.jbryun.com'
   - '+.jbxy.com'
@@ -31622,7 +31639,6 @@ payload:
   - '+.jisuchou.com'
   - '+.jisuclouds.com'
   - '+.jisucn.com'
-  - '+.jisufeifei.com'
   - '+.jisuim.com'
   - '+.jisuimg.com'
   - '+.jisujie.com'
@@ -32996,7 +33012,6 @@ payload:
   - '+.kaimanhua.com'
   - '+.kaimg.com'
   - '+.kaimigou.com'
-  - '+.kaimulu.com'
   - '+.kaipan88.com'
   - '+.kaipanla.com'
   - '+.kaiqiancq.com'
@@ -34342,6 +34357,7 @@ payload:
   - '+.kxxxl.com'
   - '+.kxzmw.com'
   - '+.ky-express.com'
+  - '+.ky0048.cc'
   - '+.ky010.vip'
   - '+.ky5yx.com'
   - '+.ky958.com'
@@ -34380,9 +34396,11 @@ payload:
   - '+.kza.cc'
   - '+.kzeaa.com'
   - '+.kzecc.com'
+  - '+.kzehh.com'
   - '+.kzeii.com'
   - '+.kzemm.com'
   - '+.kzenn.com'
+  - '+.kzepp.com'
   - '+.kzerr.com'
   - '+.kzett.com'
   - '+.kzeww.com'
@@ -35195,7 +35213,6 @@ payload:
   - '+.leyoujia.com'
   - '+.leyouquan.com'
   - '+.leyu.com'
-  - '+.leyubox.com'
   - '+.leyue100.com'
   - '+.leyun001.com'
   - '+.leyungame.com'
@@ -39055,7 +39072,6 @@ payload:
   - '+.mshxw.com'
   - '+.msits.com'
   - '+.msjcqm.com'
-  - '+.msjxxz.com'
   - '+.mskjf.com'
   - '+.mslzz.com'
   - '+.msmartlife.com'
@@ -39280,7 +39296,6 @@ payload:
   - '+.mxzzzs.com'
   - '+.my-3dcad.com'
   - '+.my-best-products.com'
-  - '+.my-host.cc'
   - '+.my-summit.com'
   - '+.my.st.com'
   - '+.my0511.com'
@@ -39580,6 +39595,7 @@ payload:
   - '+.mzuan.com'
   - '+.mzuimg.net'
   - '+.mzwu.com'
+  - '+.mzxvib.com'
   - '+.mzyfz.com'
   - '+.mzyun.ren'
   - '+.mzzjw.com'
@@ -39663,6 +39679,7 @@ payload:
   - '+.nanerjia.com'
   - '+.nanerlee.me'
   - '+.nanfu.com'
+  - '+.nangcasc.com'
   - '+.nanguache.com'
   - '+.nangualin.com'
   - '+.nanhaitoday.com'
@@ -40568,6 +40585,7 @@ payload:
   - '+.nsrjlb.com'
   - '+.nsshare.com'
   - '+.nsstream.com'
+  - '+.nsszv.com'
   - '+.nstooll.com'
   - '+.nsvdwypg.cyou'
   - '+.nsw88.com'
@@ -41496,6 +41514,7 @@ payload:
   - '+.p3k3.com'
   - '+.p4pp.com'
   - '+.p512.com'
+  - '+.p5412.com'
   - '+.p5w.net'
   - '+.p8games.com'
   - '+.p99998888.com'
@@ -43176,6 +43195,7 @@ payload:
   - '+.qgcyjq.org'
   - '+.qgdz222.com'
   - '+.qgenius.com'
+  - '+.qggfji.com'
   - '+.qgpx.com'
   - '+.qgren.com'
   - '+.qgsydw.com'
@@ -44251,6 +44271,7 @@ payload:
   - '+.quegui.run'
   - '+.queji.tw'
   - '+.queniubg.com'
+  - '+.queniubm.com'
   - '+.queniucf.com'
   - '+.queniuck.com'
   - '+.queniudns.com'
@@ -44411,6 +44432,7 @@ payload:
   - '+.quyu.net'
   - '+.quyuansu.com'
   - '+.quyundong.com'
+  - '+.quzhiwen.com'
   - '+.quzhuanpan.com'
   - '+.quzhuanxiang.com'
   - '+.quzz88.com'
@@ -44424,6 +44446,7 @@ payload:
   - '+.qwdacy.com'
   - '+.qweather.com'
   - '+.qweather.net'
+  - '+.qwfync.com'
   - '+.qwgt.com'
   - '+.qwimm.com'
   - '+.qwolf.com'
@@ -44915,7 +44938,6 @@ payload:
   - '+.replicated.cc'
   - '+.rerevod.com'
   - '+.resccske.cyou'
-  - '+.resclassaction.com'
   - '+.resheji.com'
   - '+.resistor.today'
   - '+.resouxs.com'
@@ -46607,7 +46629,6 @@ payload:
   - '+.shanhaizhanji.com'
   - '+.shanhs.com'
   - '+.shanhu99.com'
-  - '+.shanhuojiaoyi.com'
   - '+.shanhuu.com'
   - '+.shanhuxueyuan.com'
   - '+.shanjinqh.com'
@@ -50330,6 +50351,7 @@ payload:
   - '+.tbhcc.com'
   - '+.tbhelper.com'
   - '+.tbhjgc.com'
+  - '+.tbizk.com'
   - '+.tbkf.net'
   - '+.tbl-import.com'
   - '+.tblk.me'
@@ -51955,6 +51977,7 @@ payload:
   - '+.tubebbs.com'
   - '+.tubegetpro.com'
   - '+.tubiaoxiu.com'
+  - '+.tubie.art'
   - '+.tuboshu.com'
   - '+.tubutu.com'
   - '+.tucaojie.com'
@@ -52760,6 +52783,7 @@ payload:
   - '+.unfish.net'
   - '+.ungifts.com'
   - '+.uni-perfect.com'
+  - '+.uni-ubi.com'
   - '+.unibizp.com'
   - '+.unicde.com'
   - '+.unicloud.com'
@@ -53035,7 +53059,6 @@ payload:
   - '+.uugame.com'
   - '+.uugtv.com'
   - '+.uuh5.com'
-  - '+.uuhall.com'
   - '+.uuhimalayanqm.com'
   - '+.uuid.online'
   - '+.uuimg.com'
@@ -53065,6 +53088,7 @@ payload:
   - '+.uusucai.com'
   - '+.uutop.com'
   - '+.uutuu.com'
+  - '+.uuu.moe'
   - '+.uuu.ovh'
   - '+.uuu9.com'
   - '+.uuudo.com'
@@ -53208,7 +53232,6 @@ payload:
   - '+.vanchu.com'
   - '+.vancl.com'
   - '+.vandream.com'
-  - '+.vanfo.net'
   - '+.vanfun.com'
   - '+.vangotech.com'
   - '+.vankang.com'
@@ -54165,6 +54188,7 @@ payload:
   - '+.wannengzj.com'
   - '+.wannianli.mobi'
   - '+.wannianli.net'
+  - '+.wannianli8.com'
   - '+.wannuoda.com'
   - '+.wanqianyun.com'
   - '+.wanquankan.com'
@@ -55742,7 +55766,6 @@ payload:
   - '+.wohenizaiyiqi.com'
   - '+.woheyun.xyz'
   - '+.wohuamanhua.com'
-  - '+.wohxx.com'
   - '+.woi3d.com'
   - '+.woiyu.com'
   - '+.wojiacloud.com'
@@ -56769,7 +56792,6 @@ payload:
   - '+.xcodest.me'
   - '+.xcommon.com'
   - '+.xcoodir.com'
-  - '+.xcos.cc'
   - '+.xcot.com'
   - '+.xcpapa.site'
   - '+.xcpapa.xyz'
@@ -56981,7 +57003,6 @@ payload:
   - '+.xhkt.tv'
   - '+.xhlaowu.com'
   - '+.xhlgfsc.com'
-  - '+.xhlyjlb.com'
   - '+.xhma.com'
   - '+.xhnews.net'
   - '+.xhostserver.com'
@@ -60708,7 +60729,6 @@ payload:
   - '+.youku.com'
   - '+.youkua.net'
   - '+.youkudown.com'
-  - '+.youkuphoto.com'
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
@@ -62921,6 +62941,7 @@ payload:
   - '+.zhileng.com'
   - '+.zhili-hr.com'
   - '+.zhilian.com'
+  - '+.zhilian.host'
   - '+.zhilianfm.com'
   - '+.zhiliangren.com'
   - '+.zhiliaoke.com'
@@ -64428,7 +64449,6 @@ payload:
   - '+.zwzrent.com'
   - '+.zwzsh.net'
   - '+.zwzyzx.com'
-  - '+.zx-casting.com'
   - '+.zx-tour.com'
   - '+.zx0093.com'
   - '+.zx017.com'
