--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3317,7 +3317,6 @@ payload:
   - '+.406yx.com'
   - '+.407wan.com'
   - '+.4080517.com'
-  - '+.4080dyy.com'
   - '+.40fenzhong.com'
   - '+.40manhua.com'
   - '+.40mdd.com'
@@ -4697,7 +4696,6 @@ payload:
   - '+.58gameup.com'
   - '+.58ganji.com'
   - '+.58hzb.com'
-  - '+.58img.com'
   - '+.58insure.com'
   - '+.58iwan.com'
   - '+.58jb.com'
@@ -4753,7 +4751,6 @@ payload:
   - '+.591wy.com'
   - '+.591yhw.com'
   - '+.5923d.com'
-  - '+.5925car.com'
   - '+.592zn.com'
   - '+.59313313.com'
   - '+.593555b.com'
@@ -5186,7 +5183,6 @@ payload:
   - '+.66house.com'
   - '+.66ip.com'
   - '+.66jiedai.com'
-  - '+.66liu.com'
   - '+.66mobi.com'
   - '+.66money.com'
   - '+.66mz8.com'
@@ -5237,7 +5233,6 @@ payload:
   - '+.678922c.com'
   - '+.6789che.com'
   - '+.678edu.net'
-  - '+.678hyw.com'
   - '+.678ie.com'
   - '+.678pdf.com'
   - '+.678py.com'
@@ -6128,7 +6123,6 @@ payload:
   - '+.88hd.com'
   - '+.88hom.com'
   - '+.88ht.com'
-  - '+.88htu.com'
   - '+.88hu.com'
   - '+.88koo.com'
   - '+.88lan.com'
@@ -6367,7 +6361,6 @@ payload:
   - '+.91dub.com'
   - '+.91duba.com'
   - '+.91duobaoyu.com'
-  - '+.91dyl.com'
   - '+.91exam.org'
   - '+.91exiu.com'
   - '+.91fangan.com'
@@ -8329,7 +8322,6 @@ payload:
   - '+.amec-inc.com'
   - '+.amemv.com'
   - '+.americachineselife.com'
-  - '+.americanobgyn.com'
   - '+.ameson.org'
   - '+.amethystum.com'
   - '+.amexpressnetwork.com'
@@ -8591,7 +8583,6 @@ payload:
   - '+.anysdk.com'
   - '+.anysql.net'
   - '+.anytesting.com'
-  - '+.anytranscription.com'
   - '+.anyuantec.com'
   - '+.anyunjianzhan.com'
   - '+.anyv.net'
@@ -11327,7 +11318,6 @@ payload:
   - '+.bnjyks.com'
   - '+.bnncn.com'
   - '+.bnnd.net'
-  - '+.bnq86.com'
   - '+.bnqgsl.com'
   - '+.bnupg.com'
   - '+.bnwin.com'
@@ -12030,7 +12020,6 @@ payload:
   - '+.c-e-m.com'
   - '+.c-estbon.com'
   - '+.c-fol.net'
-  - '+.c-lion.com'
   - '+.c-lodop.com'
   - '+.c-ps.net'
   - '+.c-rst.com'
@@ -13357,7 +13346,6 @@ payload:
   - '+.chaolongbus.com'
   - '+.chaomei.shop'
   - '+.chaomi.cc'
-  - '+.chaomo25.com'
   - '+.chaonanrc.com'
   - '+.chaonei.com'
   - '+.chaonengjie.com'
@@ -14956,6 +14944,7 @@ payload:
   - '+.cloudangelfunds.com'
   - '+.cloudbase.net'
   - '+.cloudbility.com'
+  - '+.cloudcachetci.com'
   - '+.cloudcc.com'
   - '+.cloudcdn.net'
   - '+.cloudcdns.com'
@@ -17163,7 +17152,6 @@ payload:
   - '+.daliapp.net'
   - '+.daling.com'
   - '+.dalinggong.com'
-  - '+.dalings.com'
   - '+.dalipan.com'
   - '+.dalongkeji.com'
   - '+.dalongyun.com'
@@ -19622,7 +19610,6 @@ payload:
   - '+.e3ol.com'
   - '+.e4008.com'
   - '+.e4221.com'
-  - '+.e48.xyz'
   - '+.e521.com'
   - '+.e5421.com'
   - '+.e546.net'
@@ -22556,7 +22543,6 @@ payload:
   - '+.fychinago.com'
   - '+.fycpu.com'
   - '+.fydeos.com'
-  - '+.fydmodel.com'
   - '+.fyeds0.com'
   - '+.fyeds1.com'
   - '+.fyeds2.com'
@@ -29395,7 +29381,6 @@ payload:
   - '+.imdadui.com'
   - '+.imdo.co'
   - '+.imdodo.com'
-  - '+.imdou.net'
   - '+.imdst.com'
   - '+.imedao.com'
   - '+.imedicalai.com'
@@ -30131,7 +30116,6 @@ payload:
   - '+.itboy.net'
   - '+.itbulu.com'
   - '+.itbuy.com'
-  - '+.itbyc.com'
   - '+.itbyte.net'
   - '+.itcacfo.com'
   - '+.itchaguan.com'
@@ -30508,7 +30492,6 @@ payload:
   - '+.iziyo.com'
   - '+.izjj.com'
   - '+.izmzg.com'
-  - '+.izshare.net'
   - '+.izstz.com'
   - '+.izt6.com'
   - '+.izt8.com'
@@ -31114,7 +31097,6 @@ payload:
   - '+.jianzhi.net'
   - '+.jianzhi8.com'
   - '+.jianzhiba.net'
-  - '+.jianzhijiaoyu.com'
   - '+.jianzhikeji.com'
   - '+.jianzhimao.com'
   - '+.jianzhiwang.com'
@@ -32492,7 +32474,6 @@ payload:
   - '+.juhe.com'
   - '+.juheng88.com'
   - '+.juheweb.com'
-  - '+.juheying.com'
   - '+.juhome.net'
   - '+.juhuasuan.com'
   - '+.juhuicloud.com'
@@ -32975,6 +32956,7 @@ payload:
   - '+.kabasiji.com'
   - '+.kabitu.com'
   - '+.kaboy.net'
+  - '+.kacheren.com'
   - '+.kada.com'
   - '+.kadang.com'
   - '+.kadingding.com'
@@ -35073,7 +35055,6 @@ payload:
   - '+.lempstack.com'
   - '+.lengcat.com'
   - '+.lenget.com'
-  - '+.lengqing.org'
   - '+.lengxiaohua.com'
   - '+.lengziyuan.com'
   - '+.lengzzz.com'
@@ -35739,6 +35720,7 @@ payload:
   - '+.linuxidc.net'
   - '+.linuxkiss.com'
   - '+.linuxmi.com'
+  - '+.linuxmingling.com'
   - '+.linuxpanda.tech'
   - '+.linuxpk.com'
   - '+.linuxprobe.com'
@@ -38875,7 +38857,6 @@ payload:
   - '+.moonton.com'
   - '+.moooc.cc'
   - '+.mooooc.com'
-  - '+.moootooo.com'
   - '+.moore.live'
   - '+.moore.ren'
   - '+.moore8.com'
@@ -41796,7 +41777,6 @@ payload:
   - '+.pcaposter.com'
   - '+.pcapqz.com'
   - '+.pcb-hl.com'
-  - '+.pcb-si.com'
   - '+.pcb3.com'
   - '+.pcb818.com'
   - '+.pcbask.com'
@@ -41808,7 +41788,6 @@ payload:
   - '+.pcbhunt.com'
   - '+.pcbiot.com'
   - '+.pcbjob.com'
-  - '+.pcbres.com'
   - '+.pcbserve.com'
   - '+.pcbsheji.com'
   - '+.pcbtech.net'
@@ -43011,6 +42990,7 @@ payload:
   - '+.qaqgame.com'
   - '+.qast.com'
   - '+.qaxanyu.com'
+  - '+.qaxanyuv6.com'
   - '+.qaxcloudwaf.com'
   - '+.qaxwzws.com'
   - '+.qazxsdc.com'
@@ -44503,7 +44483,6 @@ payload:
   - '+.qyec.com'
   - '+.qyer.com'
   - '+.qyerstatic.com'
-  - '+.qyfwc.com'
   - '+.qyg12.com'
   - '+.qyg9.com'
   - '+.qyglzz.com'
@@ -45437,6 +45416,7 @@ payload:
   - '+.rulejianzhan.com'
   - '+.rulesofsurvivalgame.com'
   - '+.rum8.perf.linkedin.com'
+  - '+.rumt-sg.com'
   - '+.runcmd.com'
   - '+.runcome.com'
   - '+.runde666.net'
@@ -45565,7 +45545,6 @@ payload:
   - '+.s4yd.com'
   - '+.s575.com'
   - '+.s5tx.com'
-  - '+.s60sky.com'
   - '+.s72c.com'
   - '+.s8dj.com'
   - '+.s8x1.com'
@@ -49395,7 +49374,6 @@ payload:
   - '+.suxiege.com'
   - '+.suxing.me'
   - '+.suxuewang.com'
-  - '+.suyanw.com'
   - '+.suyuening.com'
   - '+.suyugame.com'
   - '+.suyujoy.com'
@@ -49417,7 +49395,6 @@ payload:
   - '+.svip51.com'
   - '+.svipduihuan.com'
   - '+.svlik.com'
-  - '+.svmuu.com'
   - '+.svn999.com'
   - '+.svnbucket.com'
   - '+.svnspot.com'
@@ -50213,7 +50190,6 @@ payload:
   - '+.taocz.com'
   - '+.taodabai.com'
   - '+.taodake.com'
-  - '+.taodangpu.com'
   - '+.taodaso.com'
   - '+.taodaxiang.com'
   - '+.taodianjia.com'
@@ -50225,6 +50201,7 @@ payload:
   - '+.taofang.com'
   - '+.taofen8.com'
   - '+.taofont.com'
+  - '+.taogouxingxuan.com'
   - '+.taogula.com'
   - '+.taohaobang.com'
   - '+.taohhui.com'
@@ -51290,7 +51267,6 @@ payload:
   - '+.tmrcw.com'
   - '+.tmscnz.com'
   - '+.tmsf.com'
-  - '+.tmsgschool.com'
   - '+.tmsmh.com'
   - '+.tmtforum.com'
   - '+.tmtpost.com'
@@ -52075,7 +52051,6 @@ payload:
   - '+.tujiacdn.com'
   - '+.tujian.com'
   - '+.tujidu.com'
-  - '+.tujie8.com'
   - '+.tujiwar.com'
   - '+.tujixiazai.com'
   - '+.tuke8.com'
@@ -52851,7 +52826,6 @@ payload:
   - '+.unlimax.com'
   - '+.unnnnn.com'
   - '+.unogenius.com'
-  - '+.unohacha.com'
   - '+.unpcn.com'
   - '+.unqu.com'
   - '+.unsemi.com.tw'
@@ -56802,6 +56776,7 @@ payload:
   - '+.xcstuido.com'
   - '+.xcsyxx.net'
   - '+.xctmr.com'
+  - '+.xcurrency.com'
   - '+.xcvgame.cc'
   - '+.xcvmbyte.com'
   - '+.xcvxcv.space'
@@ -58221,7 +58196,6 @@ payload:
   - '+.xlkorganic.com'
   - '+.xlkty.com'
   - '+.xllxdg.com'
-  - '+.xlm33.com'
   - '+.xlobo.com'
   - '+.xlpai.com'
   - '+.xlpan.com'
@@ -58454,7 +58428,6 @@ payload:
   - '+.xqyk024.com'
   - '+.xrcch.com'
   - '+.xrccp.com'
-  - '+.xreacloud.com'
   - '+.xredu.com'
   - '+.xrender.com'
   - '+.xrichengapp.com'
@@ -58809,7 +58782,6 @@ payload:
   - '+.xunyun.com'
   - '+.xunzai.com'
   - '+.xunzhuang.net'
-  - '+.xunzhuo123.com'
   - '+.xunzi.cc'
   - '+.xuooo.com'
   - '+.xupu.name'
@@ -59395,6 +59367,7 @@ payload:
   - '+.ybzkb.com'
   - '+.yc123.com'
   - '+.yc12313.com'
+  - '+.yc2e.com'
   - '+.yc370.com'
   - '+.yc38.com'
   - '+.yc999vip.com'
@@ -59427,8 +59400,11 @@ payload:
   - '+.ycool.com'
   - '+.ycpack.net'
   - '+.ycpai.com'
+  - '+.ycpsy.com'
   - '+.ycrh-tattoo.com'
+  - '+.ycrh.com'
   - '+.ycrusher.com'
+  - '+.ycs120.com'
   - '+.ycsd.work'
   - '+.ycsrc.com'
   - '+.ycsystem.com'
@@ -59447,6 +59423,7 @@ payload:
   - '+.ycypin.com'
   - '+.ycyui.com'
   - '+.yczihua.com'
+  - '+.yczxyy.com'
   - '+.ydaobo.com'
   - '+.ydbimg.com'
   - '+.ydc360.com'
@@ -59619,7 +59596,6 @@ payload:
   - '+.yezhuwq.com'
   - '+.yezhuwuyou.com'
   - '+.yeziapp.com'
-  - '+.yezicc.com'
   - '+.yeziting.com'
   - '+.yezixigame.com'
   - '+.yezixueyuan.com'
@@ -61515,7 +61491,6 @@ payload:
   - '+.yunkezan.com'
   - '+.yunkongpingban.com'
   - '+.yunlebao.com'
-  - '+.yunlianip.com'
   - '+.yunlibeauty.com'
   - '+.yunlie.net'
   - '+.yunlietou.com'
@@ -62279,6 +62254,7 @@ payload:
   - '+.zemuo.com'
   - '+.zen-est.com'
   - '+.zengdefei.com'
+  - '+.zenggaocn.com'
   - '+.zengjunpeng.com'
   - '+.zengrong.net'
   - '+.zenha.net'
@@ -62877,7 +62853,6 @@ payload:
   - '+.zhidaoanli.com'
   - '+.zhidemai.com'
   - '+.zhidesoft.com'
-  - '+.zhidian3g.com'
   - '+.zhidieyun.com'
   - '+.zhidj.com'
   - '+.zhidmai.com'
