--- a/directbak.yaml
+++ b/directbak.yaml
@@ -246,7 +246,6 @@ payload:
   - '+.029yjy.com'
   - '+.029yljj.com'
   - '+.029zp.com'
-  - '+.02edu.com'
   - '+.02kdid.com'
   - '+.02lu.com'
   - '+.02o.pw'
@@ -2103,6 +2102,7 @@ payload:
   - '+.22zy.net'
   - '+.2300sjz.com'
   - '+.230596.com'
+  - '+.230890.com'
   - '+.231122.com'
   - '+.232232.xyz'
   - '+.2323u.com'
@@ -2998,11 +2998,13 @@ payload:
   - '+.373net.com'
   - '+.373yx.com'
   - '+.375263.com'
+  - '+.375772rug.com'
   - '+.375buy.com'
   - '+.37770559.com'
   - '+.378699.com'
   - '+.37937.com'
   - '+.3798.com'
+  - '+.3799qq.com'
   - '+.37bjw.com'
   - '+.37cos.com'
   - '+.37cs.com'
@@ -4454,7 +4456,6 @@ payload:
   - '+.5360jx.com'
   - '+.53617686.com'
   - '+.5366.com'
-  - '+.53666.org'
   - '+.5367.com'
   - '+.537.com'
   - '+.537882736.com'
@@ -4762,6 +4763,7 @@ payload:
   - '+.595led.com'
   - '+.595tuchuang.com'
   - '+.595tz286.cc'
+  - '+.595tz440.cc'
   - '+.596fc.com'
   - '+.597.com'
   - '+.59706.com'
@@ -4927,7 +4929,6 @@ payload:
   - '+.5s4f.com'
   - '+.5sai.com'
   - '+.5sdy.cc'
-  - '+.5sdy.com'
   - '+.5seals.com'
   - '+.5see.com'
   - '+.5sem.com'
@@ -6116,6 +6117,7 @@ payload:
   - '+.88bank.com'
   - '+.88bx.com'
   - '+.88cdn.com'
+  - '+.88chuangyewang.com'
   - '+.88dushu.com'
   - '+.88eq.com'
   - '+.88fenxiao.com'
@@ -7070,6 +7072,7 @@ payload:
   - '+.a21fs.com'
   - '+.a21yishion.com'
   - '+.a2dongman.com'
+  - '+.a37jgfjl105.cc'
   - '+.a4s6.com'
   - '+.a5.net'
   - '+.a5idc.net'
@@ -8412,7 +8415,6 @@ payload:
   - '+.angelhome.org'
   - '+.angeljjangnara.com'
   - '+.angell-studio.com'
-  - '+.angellsec.com'
   - '+.angelmom.org'
   - '+.angelyeast.com'
   - '+.angelyeast.ru'
@@ -10426,7 +10428,6 @@ payload:
   - '+.bfw.cc'
   - '+.bfyx.com'
   - '+.bfyx.net'
-  - '+.bfzhuce.com'
   - '+.bg-cs.com'
   - '+.bg.v4.a.dl.ws.microsoft.com'
   - '+.bg4.v4.a.dl.ws.microsoft.com'
@@ -13424,6 +13425,7 @@ payload:
   - '+.cheari.com'
   - '+.chebaba.com'
   - '+.chebada.com'
+  - '+.checar.mobi'
   - '+.checheboke.com'
   - '+.chechong.com'
   - '+.check.cc'
@@ -13770,7 +13772,6 @@ payload:
   - '+.china2000.org'
   - '+.china35.com'
   - '+.china356.com'
-  - '+.china360.net'
   - '+.china3gpp.com'
   - '+.china4a.org'
   - '+.china50plus.com'
@@ -14008,6 +14009,7 @@ payload:
   - '+.chinaiern.com'
   - '+.chinaiia.com'
   - '+.chinainout.com'
+  - '+.chinainqredient.com'
   - '+.chinainsbrokers.com'
   - '+.chinaiol.com'
   - '+.chinaios.com'
@@ -14403,6 +14405,7 @@ payload:
   - '+.chnci.com'
   - '+.chncia.org'
   - '+.chncomic.com'
+  - '+.chncopper.com'
   - '+.chncpa.org'
   - '+.chncwds.com'
   - '+.chndesign.com'
@@ -15159,6 +15162,7 @@ payload:
   - '+.cn3k5.com'
   - '+.cn3v.net'
   - '+.cn3wm.com'
+  - '+.cn486.com'
   - '+.cn4e.com'
   - '+.cn51.com'
   - '+.cn5135.com'
@@ -18156,7 +18160,6 @@ payload:
   - '+.didixk.com'
   - '+.didiyun.com'
   - '+.didiyunapi.com'
-  - '+.didown.com'
   - '+.didu86.com'
   - '+.diducoder.com'
   - '+.diebaosoft.com'
@@ -18716,7 +18719,6 @@ payload:
   - '+.dongfang-wh.com'
   - '+.dongfang.com'
   - '+.dongfang77.com'
-  - '+.dongfangfj.com'
   - '+.dongfangfuli.com'
   - '+.dongfangnews.com'
   - '+.dongfangtech.net'
@@ -23904,7 +23906,6 @@ payload:
   - '+.goulong.com'
   - '+.goumee.com'
   - '+.goumin.com'
-  - '+.gounahaozi.org'
   - '+.goupuzi.com'
   - '+.goushh.com'
   - '+.gouso.com'
@@ -24057,6 +24058,7 @@ payload:
   - '+.gs14.com'
   - '+.gs2.ww.prod.dl.playstation.net'
   - '+.gs307.com'
+  - '+.gs3jro.xyz'
   - '+.gs99gs.com'
   - '+.gsadds.com'
   - '+.gsafc.com'
@@ -24449,7 +24451,6 @@ payload:
   - '+.gushiciqu.com'
   - '+.gushidaquan.cc'
   - '+.gushiju.net'
-  - '+.gushimi.org'
   - '+.gushufang.com'
   - '+.gusiyuan.com'
   - '+.gusuwang.com'
@@ -24666,6 +24667,7 @@ payload:
   - '+.gzhe.net'
   - '+.gzhhr.com'
   - '+.gzhifi.com'
+  - '+.gzhkl.com'
   - '+.gzhphb.com'
   - '+.gzhshoulu.wang'
   - '+.gzhtg.com'
@@ -26731,7 +26733,6 @@ payload:
   - '+.hnmdtv.com'
   - '+.hnmeilinya.xyz'
   - '+.hnmgjr.com'
-  - '+.hnmj.vip'
   - '+.hnmrffm888.com'
   - '+.hnmsw.com'
   - '+.hnmuseum.com'
@@ -27652,6 +27653,7 @@ payload:
   - '+.huazhu.com'
   - '+.huazhuanapp.com'
   - '+.huazhucorp.com'
+  - '+.huazi55.xyz'
   - '+.hubcyts.com'
   - '+.hubei-design.com'
   - '+.hubeibbs.net'
@@ -27791,6 +27793,7 @@ payload:
   - '+.huishoushang.com'
   - '+.huishuaka.com'
   - '+.huishuang.xyz'
+  - '+.huishuofa.com'
   - '+.huisituo.com'
   - '+.huisky.com'
   - '+.huisou.com'
@@ -28467,7 +28470,6 @@ payload:
   - '+.iadmore.com'
   - '+.iaeac.org'
   - '+.iaikx.com'
-  - '+.iakmai.com'
   - '+.ialicdn.com'
   - '+.ialloc.com'
   - '+.ialloc.org'
@@ -28662,7 +28664,6 @@ payload:
   - '+.ichanyu.com'
   - '+.ichaoshangyue.com'
   - '+.ichaotu.com'
-  - '+.icharm.me'
   - '+.ichat800.com'
   - '+.ichdata.com'
   - '+.ichehaopei.com'
@@ -30653,7 +30654,6 @@ payload:
   - '+.jcsjt.com'
   - '+.jctmj.net'
   - '+.jctrans.com'
-  - '+.jctuku.com'
   - '+.jcu.cc'
   - '+.jcwcn.com'
   - '+.jcwgk.com'
@@ -31578,6 +31578,7 @@ payload:
   - '+.jinzhuguo.com'
   - '+.jinzjy.com'
   - '+.jinzunjy.com'
+  - '+.jioaoek.com'
   - '+.jioluo.com'
   - '+.jiongcun.com'
   - '+.jiongdm.com'
@@ -32833,6 +32834,7 @@ payload:
   - '+.jysd.com'
   - '+.jysld.com'
   - '+.jysq.net'
+  - '+.jyss.com'
   - '+.jyss.net'
   - '+.jysyzk.com'
   - '+.jytdlz.com'
@@ -33888,7 +33890,6 @@ payload:
   - '+.kqgeo.com'
   - '+.kqidong.com'
   - '+.kqiwen.com'
-  - '+.kqiwen.net'
   - '+.kqj123.com'
   - '+.kqmmm.com'
   - '+.kqqy.com'
@@ -34382,6 +34383,7 @@ payload:
   - '+.kzeii.com'
   - '+.kzemm.com'
   - '+.kzenn.com'
+  - '+.kzeoo.com'
   - '+.kzepp.com'
   - '+.kzerr.com'
   - '+.kzett.com'
@@ -35026,6 +35028,7 @@ payload:
   - '+.lejunwl.com'
   - '+.lekannews.com'
   - '+.lekevr.com'
+  - '+.lekkrrlel.com'
   - '+.lekoukou.com'
   - '+.lekpass.com'
   - '+.lelai.com'
@@ -35445,6 +35448,7 @@ payload:
   - '+.liexing-ai.com'
   - '+.liexing.com'
   - '+.lieyou.com'
+  - '+.lieyou888.com'
   - '+.lieyuncapital.com'
   - '+.lif8.com'
   - '+.lifan.com'
@@ -35602,6 +35606,7 @@ payload:
   - '+.lingtu.com'
   - '+.lingtuan.com'
   - '+.lingw.net'
+  - '+.lingwh.com'
   - '+.lingwu66.com'
   - '+.lingxi360.com'
   - '+.lingxicloud.com'
@@ -35858,7 +35863,6 @@ payload:
   - '+.liumuzulin.com'
   - '+.liumwei.org'
   - '+.liumx.com'
-  - '+.liunews.com'
   - '+.liunian.info'
   - '+.liunianbanxia.com'
   - '+.liushidong.com'
@@ -37103,7 +37107,6 @@ payload:
   - '+.maiduo.com'
   - '+.maienguoji.com'
   - '+.maifjb.com'
-  - '+.maigevoice.com'
   - '+.maigoo.com'
   - '+.maiguduo.com'
   - '+.maihanji.com'
@@ -37597,7 +37600,6 @@ payload:
   - '+.mdmhaiwai.com'
   - '+.mdmmm.com'
   - '+.mdnice.com'
-  - '+.mdouyin.com'
   - '+.mdpda.com'
   - '+.mdsyzx.com'
   - '+.mdtu.com'
@@ -38144,7 +38146,6 @@ payload:
   - '+.micw.com'
   - '+.midaapi.com'
   - '+.midadata.com'
-  - '+.midaijihua.com'
   - '+.midainc.com'
   - '+.midasbuy.com'
   - '+.midea.com.tr'
@@ -39133,7 +39134,6 @@ payload:
   - '+.mtwl.net'
   - '+.mtxgx.com'
   - '+.mtxyx.com'
-  - '+.mtyee.com'
   - '+.mtyun.com'
   - '+.mtzbs.com'
   - '+.mtzcjy.com'
@@ -39423,7 +39423,6 @@ payload:
   - '+.myk3.com'
   - '+.mykqyy.com'
   - '+.mylbabao.com'
-  - '+.myleguan.com'
   - '+.mylguoji.com'
   - '+.mylhz.com'
   - '+.mylibs.org'
@@ -39569,6 +39568,7 @@ payload:
   - '+.mzone.site'
   - '+.mzread.com'
   - '+.mzres.com'
+  - '+.mzrwgo.com'
   - '+.mzsky.cc'
   - '+.mzsmn.com'
   - '+.mztgame.com'
@@ -41656,7 +41656,6 @@ payload:
   - '+.paopaohd.com'
   - '+.paopaox.com'
   - '+.paoshuba.cc'
-  - '+.paotxt.net'
   - '+.paoxq.com'
   - '+.paoxue.com'
   - '+.papa21.com'
@@ -42285,7 +42284,6 @@ payload:
   - '+.pinzs.com'
   - '+.pioneerlinux.com'
   - '+.pioneersci.com'
-  - '+.pioneertimes.net'
   - '+.pipa.com'
   - '+.pipacdn.com'
   - '+.pipacoding.com'
@@ -42325,9 +42323,11 @@ payload:
   - '+.pjob.net'
   - '+.pjrcn.com'
   - '+.pjtime.com'
+  - '+.pjtt445.xyz'
   - '+.pjtx.net'
   - '+.pk052.com'
   - '+.pk106.com'
+  - '+.pk111.mom'
   - '+.pk1xia.com'
   - '+.pk2234.com'
   - '+.pk361.com'
@@ -46024,6 +46024,7 @@ payload:
   - '+.sdhdssd.com'
   - '+.sdhk2008.com'
   - '+.sdhoukang.com'
+  - '+.sdhsg.com'
   - '+.sdhsie.com'
   - '+.sdhuxiji.com'
   - '+.sdhxnykj.com'
@@ -47514,7 +47515,6 @@ payload:
   - '+.shuzibao.com'
   - '+.shuziju.com'
   - '+.shuzixiaoyuan.com'
-  - '+.shuziyinpin.com'
   - '+.shvlee.com'
   - '+.shwcsh.com'
   - '+.shwdbjgs.com'
@@ -49860,7 +49860,6 @@ payload:
   - '+.szsq.net'
   - '+.szsunlaser.com'
   - '+.szswt.net'
-  - '+.szt365.com'
   - '+.sztaijier.com'
   - '+.sztalent.org'
   - '+.sztara.com'
@@ -50192,6 +50191,7 @@ payload:
   - '+.taodake.com'
   - '+.taodaso.com'
   - '+.taodaxiang.com'
+  - '+.taodb.net'
   - '+.taodianjia.com'
   - '+.taodiantong.com'
   - '+.taodiqupu.com'
@@ -50647,7 +50647,6 @@ payload:
   - '+.tf.wiki'
   - '+.tf86.com'
   - '+.tfax.com'
-  - '+.tfbcj.com'
   - '+.tfcaijing.com'
   - '+.tfcloud.com'
   - '+.tfclub.com'
@@ -50663,6 +50662,7 @@ payload:
   - '+.tfrl.net'
   - '+.tfsino.com'
   - '+.tfsmy.com'
+  - '+.tftplay.com'
   - '+.tfxgt.com'
   - '+.tfyum.net'
   - '+.tfzcode.com'
@@ -50676,7 +50676,6 @@ payload:
   - '+.tgbus.com'
   - '+.tgcid.org'
   - '+.tghello.com'
-  - '+.tgirl.cc'
   - '+.tgjh.com'
   - '+.tgking.net'
   - '+.tgljw.com'
@@ -51593,6 +51592,7 @@ payload:
   - '+.touwenzi.com'
   - '+.touwho.com'
   - '+.touxiang8.com'
+  - '+.touxiangwu.com'
   - '+.touying.com'
   - '+.touyouquan.com'
   - '+.touzhibang.com'
@@ -52022,7 +52022,6 @@ payload:
   - '+.tuilisr.com'
   - '+.tuiliu.net'
   - '+.tuiliw.com'
-  - '+.tuilixy.net'
   - '+.tuimax.com'
   - '+.tuimob.com'
   - '+.tuimotuimo.com'
@@ -52738,6 +52737,7 @@ payload:
   - '+.umsamd.com'
   - '+.umsns.com'
   - '+.umtrack.com'
+  - '+.umvafc.com'
   - '+.umvsoft.com'
   - '+.un-bug.com'
   - '+.un10086.com'
@@ -53552,6 +53552,7 @@ payload:
   - '+.vivst.com'
   - '+.viwik.com'
   - '+.vixue.com'
+  - '+.vj24co.com'
   - '+.vjia.com'
   - '+.vjiazu.com'
   - '+.vjie.com'
@@ -54113,7 +54114,6 @@ payload:
   - '+.wangzhan6.com'
   - '+.wangzhanbao.cc'
   - '+.wangzhanbianji.com'
-  - '+.wangzhanbus.com'
   - '+.wangzhanchi.com'
   - '+.wangzhanmeng.com'
   - '+.wangzhanzj.com'
@@ -57564,7 +57564,6 @@ payload:
   - '+.xifuquan.com'
   - '+.xigeweb.com'
   - '+.xigua110.com'
-  - '+.xigua5.com'
   - '+.xiguabook.com'
   - '+.xiguaimg.com'
   - '+.xiguaji.com'
@@ -57781,7 +57780,6 @@ payload:
   - '+.xinhuaxmt.com'
   - '+.xinhuayimin.com'
   - '+.xinhuazhiyun.com'
-  - '+.xinhuipihua.com'
   - '+.xinhuoshuguan.com'
   - '+.xiniu.com'
   - '+.xiniu3d.com'
@@ -57887,7 +57885,6 @@ payload:
   - '+.xinxindai.com'
   - '+.xinxing.org'
   - '+.xinxing100.com'
-  - '+.xinxingdaoju.com'
   - '+.xinxingjiaocheng.com'
   - '+.xinxingly.com'
   - '+.xinxinhot.net'
@@ -59061,7 +59058,6 @@ payload:
   - '+.xzsnw.com'
   - '+.xzstatic.com'
   - '+.xzsthj.com'
-  - '+.xztylfu.com'
   - '+.xztzb.com'
   - '+.xzw.com'
   - '+.xzx.com'
@@ -59299,6 +59295,7 @@ payload:
   - '+.yaozhizhu.com'
   - '+.yaozs.com'
   - '+.yaozui.com'
+  - '+.yaqurc.com'
   - '+.yareiot.com'
   - '+.yaristyle.com'
   - '+.yarnn.com'
@@ -59961,7 +59958,6 @@ payload:
   - '+.yinglunka.com'
   - '+.yingmei.me'
   - '+.yingmi.com'
-  - '+.yingmile.com'
   - '+.yingming.net'
   - '+.yingpaigame.com'
   - '+.yingshe.com'
@@ -59976,7 +59972,6 @@ payload:
   - '+.yingtaoai.com'
   - '+.yingtaosiyue.com'
   - '+.yingtaoyun.com'
-  - '+.yingujr.com'
   - '+.yinguobing.com'
   - '+.yingupuhui.com'
   - '+.yingwenming.com'
@@ -62235,7 +62230,6 @@ payload:
   - '+.zealsafe.net'
   - '+.zebred.com'
   - '+.zechoriah.com'
-  - '+.zechunbengye.com'
   - '+.zeda1.com'
   - '+.zedukm.com'
   - '+.zeekrlife.com'
@@ -62762,6 +62756,7 @@ payload:
   - '+.zhengyinyong.com'
   - '+.zhengyounet.com'
   - '+.zhengzai.tv'
+  - '+.zhengzhen25.xyz'
   - '+.zhengzhoubus.com'
   - '+.zhengzhoulvxing.com'
   - '+.zhengzi.me'
@@ -62829,6 +62824,7 @@ payload:
   - '+.zhibo.co'
   - '+.zhibo.me'
   - '+.zhibo.tv'
+  - '+.zhibo128x.xyz'
   - '+.zhibo8.cc'
   - '+.zhibo8.com'
   - '+.zhiboba.com'
@@ -63039,7 +63035,6 @@ payload:
   - '+.zhizunbao668.com'
   - '+.zhizunbo.com'
   - '+.zhizundns.com'
-  - '+.zhizunlian.com'
   - '+.zhizunnews.com'
   - '+.zhizuobiao.com'
   - '+.zhizuobiaojiaoyu.com'
@@ -63063,7 +63058,6 @@ payload:
   - '+.zhmold.com'
   - '+.zhmzjl.com'
   - '+.zhmzqi.com'
-  - '+.zhnjw.com'
   - '+.zhnxcw.com'
   - '+.zhong.com'
   - '+.zhong100.com'
@@ -63926,10 +63920,7 @@ payload:
   - '+.zmxiazai.com'
   - '+.zmxiu.com'
   - '+.zmye5vly.com'
-  - '+.zmzapi.com'
-  - '+.zmzapi.net'
   - '+.zmzjk.com'
-  - '+.zmzjstu.com'
   - '+.zn8.com'
   - '+.znba.net'
   - '+.znbo.com'
@@ -64251,7 +64242,6 @@ payload:
   - '+.zuanqianyi.com'
   - '+.zuanshi.com'
   - '+.zuanshitoupiao.com'
-  - '+.zuantao.cc'
   - '+.zuber.im'
   - '+.zubunet.com'
   - '+.zuche.com'
@@ -64535,7 +64525,6 @@ payload:
   - '+.zyh365.com'
   - '+.zyhao.com'
   - '+.zyhbxs.com'
-  - '+.zyhh.me'
   - '+.zyhot.com'
   - '+.zyiis.net'
   - '+.zyip.com'
@@ -64644,6 +64633,7 @@ payload:
   - '+.zzmscg.com'
   - '+.zzmyt.com'
   - '+.zznah001.com'
+  - '+.zznn7.xyz'
   - '+.zzobokj.com'
   - '+.zzpd8.com'
   - '+.zzpuke.com'
