--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20230105023755
+  - DOMAIN-SUFFIX,#VER=20230106152442
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=64806
+  - DOMAIN-SUFFIX,#TOTAL_LINES=64799
   - DOMAIN-SUFFIX,000dn.com
   - DOMAIN-SUFFIX,kwcdn.000dn.com
   - DOMAIN-SUFFIX,kwcscdn.000dn.com
@@ -640,6 +640,7 @@ payload:
   - DOMAIN-SUFFIX,photo.188kc.cn
   - DOMAIN-SUFFIX,188server.com
   - DOMAIN-SUFFIX,188xiaoba.net
+  - DOMAIN-SUFFIX,webwebfenxi.189.cn
   - DOMAIN-SUFFIX,189zj.cn
   - DOMAIN-SUFFIX,www.189zj.cn
   - DOMAIN-SUFFIX,18a8f5a1c1.com
@@ -9817,10 +9818,8 @@ payload:
   - DOMAIN-SUFFIX,push.zhanzhang.baidu.com
   - DOMAIN-SUFFIX,qapm.baidu.com
   - DOMAIN-SUFFIX,sclick.baidu.com
-  - DOMAIN-SUFFIX,sfp.safe.baidu.com
   - DOMAIN-SUFFIX,share.baidu.com
   - DOMAIN-SUFFIX,sjh.baidu.com
-  - DOMAIN-SUFFIX,sofire.baidu.com
   - DOMAIN-SUFFIX,static1.searchbox.baidu.com
   - DOMAIN-SUFFIX,tcbox.baidu.com
   - DOMAIN-SUFFIX,techain.baidu.com
@@ -19850,7 +19849,6 @@ payload:
   - DOMAIN-SUFFIX,g.wan.douyu.com
   - DOMAIN-SUFFIX,club-img.douyucdn.cn
   - DOMAIN-SUFFIX,cs-op.douyucdn.cn
-  - DOMAIN-SUFFIX,gift.douyucdn.cn
   - DOMAIN-SUFFIX,rtbapi.douyucdn.cn
   - DOMAIN-SUFFIX,dotcounter.douyutv.com
   - DOMAIN-SUFFIX,dovemajorem.com
@@ -21720,7 +21718,6 @@ payload:
   - DOMAIN-SUFFIX,erosadv.com
   - DOMAIN-SUFFIX,erosionexception.com
   - DOMAIN-SUFFIX,erosyndc.com
-  - DOMAIN-SUFFIX,eroterest.net
   - DOMAIN-SUFFIX,erotikdating.com
   - DOMAIN-SUFFIX,erotizer.info
   - DOMAIN-SUFFIX,erovation.com
@@ -34484,7 +34481,6 @@ payload:
   - DOMAIN-SUFFIX,lijtfkmmiisrli.xyz
   - DOMAIN-SUFFIX,mjf.lijun8.com
   - DOMAIN-SUFFIX,stats.lik.fr
-  - DOMAIN-SUFFIX,button.like.co
   - DOMAIN-SUFFIX,likeads.com
   - DOMAIN-SUFFIX,likebtn.com
   - DOMAIN-SUFFIX,likecontrol.com
@@ -37736,7 +37732,6 @@ payload:
   - DOMAIN-SUFFIX,hz.mmstat.com
   - DOMAIN-SUFFIX,p3p.mmstat.com
   - DOMAIN-SUFFIX,res.mmstat.com
-  - DOMAIN-SUFFIX,wgo.mmstat.com
   - DOMAIN-SUFFIX,yt.mmstat.com
   - DOMAIN-SUFFIX,mmtro.com
   - DOMAIN-SUFFIX,j.mmtu.top
@@ -56933,7 +56928,6 @@ payload:
   - DOMAIN-SUFFIX,urlat.cn
   - DOMAIN-SUFFIX,urlbrief.com
   - DOMAIN-SUFFIX,urlcash.net
-  - DOMAIN-SUFFIX,urldefense.com
   - DOMAIN-SUFFIX,urldelivery.com
   - DOMAIN-SUFFIX,urlet.cn
   - DOMAIN-SUFFIX,x0r.urlgalleries.net
@@ -62454,7 +62448,6 @@ payload:
   - DOMAIN-SUFFIX,a.youdao.com
   - DOMAIN-SUFFIX,clkservice.youdao.com
   - DOMAIN-SUFFIX,b.clkservice.youdao.com
-  - DOMAIN-SUFFIX,c.youdao.com
   - DOMAIN-SUFFIX,clkservice.mail.youdao.com
   - DOMAIN-SUFFIX,union.youdao.com
   - DOMAIN-SUFFIX,clkservice.union.youdao.com
