--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1438,6 +1438,7 @@ payload:
   - '+.175kh.com'
   - '+.175pt.com'
   - '+.175pt.net'
+  - '+.175sf.com'
   - '+.175wan.com'
   - '+.176616.com'
   - '+.17666.mobi'
@@ -1685,7 +1686,6 @@ payload:
   - '+.1931.com'
   - '+.1937cn.com'
   - '+.193839.com'
-  - '+.193sa.com'
   - '+.1947.cc'
   - '+.1949idc.com'
   - '+.195155.com'
@@ -1721,6 +1721,7 @@ payload:
   - '+.199u2.com'
   - '+.199yt.com'
   - '+.199zw.com'
+  - '+.19call.com'
   - '+.19kan.com'
   - '+.19lou.com'
   - '+.19mi.net'
@@ -2117,6 +2118,7 @@ payload:
   - '+.2339.com'
   - '+.233d.net'
   - '+.233i.me'
+  - '+.233leyuan.com'
   - '+.233lyly.com'
   - '+.233o.net'
   - '+.233py.com'
@@ -2385,6 +2387,7 @@ payload:
   - '+.2itcn.com'
   - '+.2j88.com'
   - '+.2jianli.com'
+  - '+.2jiapu.com'
   - '+.2k2k.com'
   - '+.2kb.com'
   - '+.2ktq.com'
@@ -2539,7 +2542,6 @@ payload:
   - '+.31yj.com'
   - '+.31zscl.com'
   - '+.320106.com'
-  - '+.3208.net'
   - '+.320921.com'
   - '+.321200.com'
   - '+.321274.com'
@@ -2990,6 +2992,7 @@ payload:
   - '+.37274.com'
   - '+.373258.com'
   - '+.3733.com'
+  - '+.3733game.com'
   - '+.3737.com'
   - '+.3737k.com'
   - '+.373best.com'
@@ -4009,7 +4012,6 @@ payload:
   - '+.51shuobo.com'
   - '+.51shyc.com'
   - '+.51signing.com'
-  - '+.51simple.com'
   - '+.51sjk.com'
   - '+.51sky.net'
   - '+.51sole.com'
@@ -4155,7 +4157,6 @@ payload:
   - '+.51zjxm.com'
   - '+.51zkzx.com'
   - '+.51zmt.net'
-  - '+.51zpyc.com'
   - '+.51zr.com'
   - '+.51zsjc.com'
   - '+.51ztzj.com'
@@ -6326,7 +6327,6 @@ payload:
   - '+.91985.com'
   - '+.91ac.com'
   - '+.91act.com'
-  - '+.91aiche.com'
   - '+.91aliyun.com'
   - '+.91all.net'
   - '+.91anjian.com'
@@ -6502,6 +6502,7 @@ payload:
   - '+.922000.com'
   - '+.92220668.com'
   - '+.92220701.com'
+  - '+.925g.com'
   - '+.925ps.com'
   - '+.927.la'
   - '+.927927.com'
@@ -7775,7 +7776,6 @@ payload:
   - '+.ailuntan.com'
   - '+.ailvxing.com'
   - '+.aimagang.com'
-  - '+.aimaoji.com'
   - '+.aimapp.net'
   - '+.aimatech.com'
   - '+.aimatrix.ai'
@@ -8262,7 +8262,6 @@ payload:
   - '+.alloyteam.com'
   - '+.allpayx.com'
   - '+.allposs.com'
-  - '+.allpyra.com'
   - '+.allrace.com'
   - '+.allsaintsmusic.com'
   - '+.allsenseww.com'
@@ -9575,6 +9574,7 @@ payload:
   - '+.bailing88.com'
   - '+.bailitech.com'
   - '+.bailitop.com'
+  - '+.bailuche.com'
   - '+.bailuqixiu.com'
   - '+.baima.com'
   - '+.baimao-expo.com'
@@ -10474,7 +10474,6 @@ payload:
   - '+.bhzhuji.com'
   - '+.bhzpw.com'
   - '+.bhzyxy.net'
-  - '+.biacgn.com'
   - '+.bianbao.net'
   - '+.biancheng.net'
   - '+.bianchengquan.com'
@@ -10875,7 +10874,6 @@ payload:
   - '+.bizhi360.com'
   - '+.bizhi88.com'
   - '+.bizhicool.com'
-  - '+.bizhidaquan.com'
   - '+.bizhiquan.com'
   - '+.bizhizj.com'
   - '+.bizhongchou.com'
@@ -11303,8 +11301,6 @@ payload:
   - '+.bmshow.com'
   - '+.bmtcled.com'
   - '+.bmvps.com'
-  - '+.bmw021.com'
-  - '+.bmw143.com'
   - '+.bmw8033.com'
   - '+.bnacg.com'
   - '+.bnapp.com'
@@ -11408,6 +11404,7 @@ payload:
   - '+.bolehu.net'
   - '+.boleihg.com'
   - '+.bolejiang.com'
+  - '+.bolejobs.co'
   - '+.bolelink.com'
   - '+.bolexiaozhao.com'
   - '+.boling04.com'
@@ -13521,6 +13518,7 @@ payload:
   - '+.chengyangnews.com'
   - '+.chengyangyang.com'
   - '+.chengye-capital.com'
+  - '+.chengyucd.com'
   - '+.chengyuw.com'
   - '+.chengyuwb.com'
   - '+.chengzhongmugu.vip'
@@ -15250,7 +15248,6 @@ payload:
   - '+.cncnet.net'
   - '+.cncnki.com'
   - '+.cncolour.com'
-  - '+.cncondom.com'
   - '+.cncookernet.com'
   - '+.cncoolm.com'
   - '+.cncopter.com'
@@ -15790,6 +15787,7 @@ payload:
   - '+.coderyuan.com'
   - '+.coderzh.com'
   - '+.codes51.com'
+  - '+.codesocang.com'
   - '+.codesoft.hk'
   - '+.codesoftchina.com'
   - '+.codesoso.com'
@@ -16413,7 +16411,6 @@ payload:
   - '+.csdiy.wiki'
   - '+.csdn.com'
   - '+.csdn.net'
-  - '+.csdndx.net'
   - '+.csdnxiazai.xyz'
   - '+.csdqp.com'
   - '+.csdxcw.com'
@@ -16973,6 +16970,7 @@ payload:
   - '+.da-qian.com'
   - '+.da-quan.net'
   - '+.da.anythinktech.com'
+  - '+.da.do'
   - '+.da88.net'
   - '+.daanbar.com'
   - '+.daanche.com'
@@ -18116,7 +18114,6 @@ payload:
   - '+.diaosunet.com'
   - '+.diaox2.com'
   - '+.diaoy.com'
-  - '+.diaoyan360.com'
   - '+.diaoyou.com'
   - '+.diaoyoupai.com'
   - '+.diaoyu.com'
@@ -20782,7 +20779,6 @@ payload:
   - '+.ewin007.com'
   - '+.ewinall.com'
   - '+.ewind.us'
-  - '+.ewinnet.com'
   - '+.ewku.com'
   - '+.ewoka.com'
   - '+.ewomail.com'
@@ -22327,6 +22323,7 @@ payload:
   - '+.ftxgame.com'
   - '+.ftxsoccer.com'
   - '+.ftzn.net'
+  - '+.fu-guan.com'
   - '+.fu57.com'
   - '+.fubaofei.com'
   - '+.fuchaoqun.com'
@@ -24021,6 +24018,7 @@ payload:
   - '+.greentomail.com'
   - '+.greenxf.com'
   - '+.greenxiazai.com'
+  - '+.grescw.com'
   - '+.gretf.com'
   - '+.greycdn.net'
   - '+.greyli.com'
@@ -26253,7 +26251,6 @@ payload:
   - '+.hglaser.com'
   - '+.hgmai.com'
   - '+.hgnc.net'
-  - '+.hgvip804.com'
   - '+.hgy413.com'
   - '+.hgyjs.com'
   - '+.hgyx.cc'
@@ -29961,6 +29958,7 @@ payload:
   - '+.isbdai.org'
   - '+.iscrv.com'
   - '+.isdox.com'
+  - '+.isdpp.com'
   - '+.iseedog.com'
   - '+.iseekids.com'
   - '+.isenruan.com'
@@ -31032,7 +31030,6 @@ payload:
   - '+.jianhaobao.com'
   - '+.jianhen.net'
   - '+.jianhui.org'
-  - '+.jianhui666.com'
   - '+.jianianle.com'
   - '+.jianick.com'
   - '+.jianjian.tv'
@@ -31086,7 +31083,6 @@ payload:
   - '+.jianxinyun.com'
   - '+.jianxun.io'
   - '+.jianyu360.com'
-  - '+.jianyuebg.com'
   - '+.jianyujiasu.com'
   - '+.jianyuweb.com'
   - '+.jianyv.com'
@@ -31803,6 +31799,7 @@ payload:
   - '+.jjedd.net'
   - '+.jjfinder.com'
   - '+.jjg630.com'
+  - '+.jjgjy.cc'
   - '+.jjglobal.com'
   - '+.jjgsxc.com'
   - '+.jjhgamedns.com'
@@ -31940,6 +31937,7 @@ payload:
   - '+.jmgo.com'
   - '+.jmhapp.com'
   - '+.jmhd8.com'
+  - '+.jmhs.net'
   - '+.jmj1995.com'
   - '+.jmjc.tech'
   - '+.jmjxc.com'
@@ -31964,7 +31962,6 @@ payload:
   - '+.jn001.com'
   - '+.jn123456.com'
   - '+.jn1535.com'
-  - '+.jnaoliyuan.com'
   - '+.jnbbbyy.com'
   - '+.jnbnzk.com'
   - '+.jncarw.com'
@@ -32049,7 +32046,6 @@ payload:
   - '+.joe92.com'
   - '+.joenchen.com'
   - '+.johhan.com'
-  - '+.johnardo.com'
   - '+.johnwatsondev.com'
   - '+.johogames.com'
   - '+.joiest.com'
@@ -34050,7 +34046,6 @@ payload:
   - '+.kuaijizheng365.com'
   - '+.kuaikanad.com'
   - '+.kuaikanmanhua.com'
-  - '+.kuaikq.com'
   - '+.kuaikuaicloud.com'
   - '+.kuaikuaidai.com'
   - '+.kuaikuaiyu.com'
@@ -34285,7 +34280,6 @@ payload:
   - '+.kvmaa.com'
   - '+.kvogues.com'
   - '+.kvov.com'
-  - '+.kvov.org'
   - '+.kwaicdn.com'
   - '+.kwaigobuy.com'
   - '+.kwaishop.com'
@@ -35653,7 +35647,6 @@ payload:
   - '+.linker.cc'
   - '+.linkernetworks.com'
   - '+.linkfinancier.com'
-  - '+.linkfun.org'
   - '+.linkh5.com'
   - '+.linkh5.xyz'
   - '+.linkhaitao.com'
@@ -38464,7 +38457,6 @@ payload:
   - '+.mizhimedia.com'
   - '+.mizhizbb.vip'
   - '+.mizhizbf.vip'
-  - '+.mizholdings.com'
   - '+.mizhuanba.com'
   - '+.mizuiren.com'
   - '+.mj85.com'
@@ -39053,7 +39045,6 @@ payload:
   - '+.mshw.net'
   - '+.mshxw.com'
   - '+.msits.com'
-  - '+.msjcqm.com'
   - '+.mskjf.com'
   - '+.mslzz.com'
   - '+.msmartlife.com'
@@ -41108,7 +41099,6 @@ payload:
   - '+.oogcw.com'
   - '+.oohdear.com'
   - '+.oolap.com'
-  - '+.oollttqq.com'
   - '+.oomake.com'
   - '+.ooniu.com'
   - '+.ooogo.com'
@@ -42195,7 +42185,6 @@ payload:
   - '+.pinbang.com'
   - '+.pinbayun.com'
   - '+.pincai.com'
-  - '+.pincai360.com'
   - '+.pinchain.com'
   - '+.pinduoduo.com'
   - '+.pinduoduo.net'
@@ -42683,6 +42672,7 @@ payload:
   - '+.ppx520.com'
   - '+.ppxclub.com'
   - '+.ppxs.net'
+  - '+.ppxvod.com'
   - '+.ppxwo.com'
   - '+.ppxzy.co'
   - '+.ppys.net'
@@ -42777,7 +42767,6 @@ payload:
   - '+.pstips.net'
   - '+.pstxg.com'
   - '+.psy-1.com'
-  - '+.psyapp.com'
   - '+.psychcn.com'
   - '+.psychspace.com'
   - '+.psysh.com'
@@ -42927,7 +42916,6 @@ payload:
   - '+.pyadx.com'
   - '+.pyasfunds.com'
   - '+.pychina.org'
-  - '+.pycxjj.com'
   - '+.pyddd.com'
   - '+.pyer.site'
   - '+.pygdzhcs.com'
@@ -43439,6 +43427,7 @@ payload:
   - '+.qie.tv'
   - '+.qiecdn.com'
   - '+.qieerxi.com'
+  - '+.qiekj.com'
   - '+.qieman.com'
   - '+.qiepai.com'
   - '+.qieta.com'
@@ -44258,10 +44247,15 @@ payload:
   - '+.queniufm.com'
   - '+.queniuhy.com'
   - '+.queniukr.com'
+  - '+.queniukw.com'
+  - '+.queniurc.com'
   - '+.queniuso.com'
   - '+.queniusy.com'
+  - '+.queniusz.com'
   - '+.queniuuf.com'
+  - '+.queniuum.com'
   - '+.queniuwx.com'
+  - '+.queniuyk.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
   - '+.queshao.com'
@@ -44528,6 +44522,7 @@ payload:
   - '+.qzdyyy.com'
   - '+.qzhlkj.net'
   - '+.qzhmzx.com'
+  - '+.qzj2.com'
   - '+.qzjcd.com'
   - '+.qzjkw.net'
   - '+.qzjlw.com'
@@ -45088,6 +45083,7 @@ payload:
   - '+.rlbl888.com'
   - '+.rlkj.com'
   - '+.rlkj.net'
+  - '+.rlnk.net'
   - '+.rlsofa.net'
   - '+.rlwyjf.com'
   - '+.rlydw.com'
@@ -47930,7 +47926,6 @@ payload:
   - '+.sjtug.org'
   - '+.sjtxt.com'
   - '+.sjtxt.la'
-  - '+.sjtyks.com'
   - '+.sjtype.com'
   - '+.sjvi.net'
   - '+.sjwl.xyz'
@@ -48179,7 +48174,6 @@ payload:
   - '+.smilec.cc'
   - '+.smilingwhitebear.com'
   - '+.smiseo.com'
-  - '+.smithnmobile.com'
   - '+.smjyfx.com'
   - '+.smk3000.com'
   - '+.smkmp.com'
@@ -48980,6 +48974,7 @@ payload:
   - '+.stockwei.com'
   - '+.stockxp.com'
   - '+.stointl.com'
+  - '+.stojf.com'
   - '+.stone168.com'
   - '+.stonebuy.com'
   - '+.stoneios.com'
@@ -50853,7 +50848,6 @@ payload:
   - '+.tianlan.net'
   - '+.tianmao.com'
   - '+.tianmaying.com'
-  - '+.tianmeng.org'
   - '+.tianmidian.com'
   - '+.tianmupe.com'
   - '+.tianmupr.com'
@@ -53116,6 +53110,7 @@ payload:
   - '+.uycnr.com'
   - '+.uyess.com'
   - '+.uyi2.com'
+  - '+.uyiban.com'
   - '+.uyou.com'
   - '+.uyouqu.com'
   - '+.uyshipin.com'
@@ -53741,6 +53736,7 @@ payload:
   - '+.vsun.com'
   - '+.vsyo.com'
   - '+.vtache.com'
+  - '+.vtbs.fun'
   - '+.vte8.com'
   - '+.vteamgroup.com'
   - '+.vtears.com'
@@ -54029,7 +54025,6 @@ payload:
   - '+.wangdongjie.com'
   - '+.wangeditor.com'
   - '+.wangejiba.com'
-  - '+.wangfanwifi.com'
   - '+.wangfujing.com'
   - '+.wanggou.com'
   - '+.wanggou236.com'
@@ -54723,7 +54718,6 @@ payload:
   - '+.weiyi.com'
   - '+.weiyianws.com'
   - '+.weiyichina.org'
-  - '+.weiyiminhenqiang.com'
   - '+.weiyiqibj.com'
   - '+.weiyitec.com'
   - '+.weiyituku.com'
@@ -55731,7 +55725,6 @@ payload:
   - '+.wodjob.com'
   - '+.wodocx.com'
   - '+.wofang.com'
-  - '+.wofang.net'
   - '+.wofangwang.com'
   - '+.wofficebox.com'
   - '+.wofjhs.com'
@@ -56048,6 +56041,7 @@ payload:
   - '+.wsisp.net'
   - '+.wsjx.net'
   - '+.wslcode.com'
+  - '+.wsljf.xyz'
   - '+.wslmf.com'
   - '+.wsloan.com'
   - '+.wsltt.com'
@@ -56837,6 +56831,7 @@ payload:
   - '+.xdrenwu.com'
   - '+.xdressy.com'
   - '+.xdrig.com'
+  - '+.xdrtc.com'
   - '+.xds04.com'
   - '+.xdsipo.com'
   - '+.xdtos.com'
@@ -58534,7 +58529,6 @@ payload:
   - '+.xtongs.com'
   - '+.xtrc.net'
   - '+.xttblog.com'
-  - '+.xttongji.com'
   - '+.xttz.com'
   - '+.xtu2.com'
   - '+.xtuan.com'
@@ -60871,6 +60865,7 @@ payload:
   - '+.youyacao.com'
   - '+.youyanchu.com'
   - '+.youyannet.com'
+  - '+.youyeetoo.com'
   - '+.youyegame.com'
   - '+.youyi-game.com'
   - '+.youyikeji666.com'
@@ -61543,6 +61538,7 @@ payload:
   - '+.yunshouji123.com'
   - '+.yunshow.com'
   - '+.yunshuxie.com'
+  - '+.yunsiya.com'
   - '+.yunsom.com'
   - '+.yunsong.com'
   - '+.yunstu.net'
@@ -62629,6 +62625,7 @@ payload:
   - '+.zhaojiao.net'
   - '+.zhaojiaoan.com'
   - '+.zhaojiaxiao.com'
+  - '+.zhaojs.com'
   - '+.zhaokaifeng.com'
   - '+.zhaokao.net'
   - '+.zhaokeli.com'
@@ -63265,7 +63262,6 @@ payload:
   - '+.zhuanzhi.net'
   - '+.zhuanzhuan.com'
   - '+.zhuanzhuantui.com'
-  - '+.zhuanzhuvpn.com'
   - '+.zhuashouru.com'
   - '+.zhuatang.com'
   - '+.zhuaxia.com'
